--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "click-outside-vue3": "^4.0.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
